--- a/ZY.WEIKE.UI/ZY.WEIKE.UI.csproj
+++ b/ZY.WEIKE.UI/ZY.WEIKE.UI.csproj
@@ -238,6 +238,7 @@
     <Content Include="Content\assets\fonts\fontawesome-webfont.woff" />
     <Content Include="Content\assets\fonts\fontawesome-webfont.woff2" />
     <Content Include="Content\assets\fonts\FontAwesome.otf" />
+    <None Include="Properties\PublishProfiles\File.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\jquery-1.8.2.js" />
