--- a/ZY.WEIKE.COMMONHELPER/ZY.WEIKE.COMMONHELPER.csproj
+++ b/ZY.WEIKE.COMMONHELPER/ZY.WEIKE.COMMONHELPER.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CacheHelper.cs" />
+    <Compile Include="CommonHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
