--- a/ZY.WEIKE.IDAL/ZY.WEIKE.IDAL.csproj
+++ b/ZY.WEIKE.IDAL/ZY.WEIKE.IDAL.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>ZY.WEIKE.IDAL</RootNamespace>
     <AssemblyName>ZY.WEIKE.IDAL</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
