--- a/ZY.WEIKE.BLL/ZY.WEIKE.BLL.csproj
+++ b/ZY.WEIKE.BLL/ZY.WEIKE.BLL.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceBLL.cs" />
     <Compile Include="UsersBLL.cs" />
+    <Compile Include="VotesBLL.cs" />
     <Compile Include="WeiKeBLL.cs" />
     <Compile Include="WordsBLL.cs" />
   </ItemGroup>
