--- a/ZY.WEIKE.MODAL/ZY.WEIKE.MODAL.csproj
+++ b/ZY.WEIKE.MODAL/ZY.WEIKE.MODAL.csproj
@@ -45,6 +45,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceModel.cs" />
     <Compile Include="UsersModel.cs" />
+    <Compile Include="VotesModel.cs" />
     <Compile Include="WeiKeModel.cs" />
     <Compile Include="WK_UserLogModel.cs" />
     <Compile Include="WordsModel.cs" />
