--- a/ZY.WEIKE.UI/ZY.WEIKE.UI.csproj
+++ b/ZY.WEIKE.UI/ZY.WEIKE.UI.csproj
@@ -138,6 +138,8 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Areas\AdminArea\AdminAreaAreaRegistration.cs" />
     <Compile Include="Areas\AdminArea\Controllers\HomeController.cs" />
+    <Compile Include="Areas\TeacherArea\Controllers\HomeController.cs" />
+    <Compile Include="Areas\TeacherArea\Controllers\WeikeController.cs" />
     <Compile Include="Areas\TeacherArea\TeacherAreaAreaRegistration.cs" />
     <Compile Include="Controllers\CategoryController.cs" />
     <Compile Include="Controllers\CategoryListController.cs" />
@@ -153,6 +155,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Areas\TeacherArea\Content\js\amazeui-pagination.js" />
+    <Content Include="Areas\TeacherArea\Content\js\Weike-Index.js" />
+    <Content Include="Areas\TeacherArea\Views\Shared\admin-index.html" />
     <Content Include="Content\assets\css\amazeui.css" />
     <Content Include="Content\assets\css\amazeui.min.css" />
     <Content Include="Content\assets\css\app.css" />
@@ -185,6 +190,7 @@
     <Content Include="Content\assets\js\Play.js" />
     <Content Include="Content\assets\videos\22.jpg" />
     <Content Include="Content\assets\videos\avideo.mp4" />
+    <Content Include="Content\css\admin.css" />
     <Content Include="Content\css\bootstrap.min.css" />
     <Content Include="Content\css\cropper.css" />
     <Content Include="Content\css\Toast.css" />
@@ -259,6 +265,11 @@
     <Content Include="Areas\AdminArea\Views\Shared\_Layout1.cshtml" />
     <Content Include="Areas\TeacherArea\Views\Web.config" />
     <Content Include="Areas\AdminArea\Views\Home\Index.cshtml" />
+    <Content Include="Areas\TeacherArea\Views\Shared\_LayoutPage1.cshtml" />
+    <Content Include="Areas\TeacherArea\Views\Home\Admin.cshtml" />
+    <Content Include="Areas\TeacherArea\Views\Home\Index.cshtml" />
+    <Content Include="Areas\TeacherArea\Views\Weike\Index.cshtml" />
+    <Content Include="Areas\TeacherArea\Views\Weike\Add.cshtml" />
     <None Include="Properties\PublishProfiles\File.pubxml" />
     <None Include="Properties\PublishProfiles\ftp.pubxml" />
     <None Include="Scripts\jquery-1.8.2.intellisense.js" />
@@ -319,9 +330,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Areas\AdminArea\Models\" />
-    <Folder Include="Areas\TeacherArea\Controllers\" />
     <Folder Include="Areas\TeacherArea\Models\" />
-    <Folder Include="Areas\TeacherArea\Views\Shared\" />
     <Folder Include="Models\" />
     <Folder Include="TempFiles\" />
   </ItemGroup>
