增加课程信息

--- a/ZY.WEIKE.UI/Areas/TeacherArea/Views/Web.config
+++ b/ZY.WEIKE.UI/Areas/TeacherArea/Views/Web.config
@@ -54,6 +54,14 @@
     <handlers>
       <remove name="BlockViewHandler"/>
       <add name="BlockViewHandler" path="*" verb="*" preCondition="integratedMode" type="System.Web.HttpNotFoundHandler" />
+
     </handlers>
+    <security>
+      <requestFiltering>
+        <requestLimits maxAllowedContentLength="209715200">
+          <!--只能小于200MB-->
+        </requestLimits>
+      </requestFiltering>
+    </security>
   </system.webServer>
 </configuration>
