--- a/ZY.WEIKE.UI/Web.config
+++ b/ZY.WEIKE.UI/Web.config
@@ -19,9 +19,15 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
     <add key="AssemblyPath" value="ZY.WEIKE.MSSQLDAL" />
     <add key="namespace" value="ZY.WEIKE.MSSQLDAL" />
+
+    <add key="vedioextension" value="\.avi|\.mp4|\.flv|\.webm"/>
+    <add key="imageextension" value="\.jpeg|\.jpg|\.png|\.gif|\.bmp"/>
+    <add key="attachextension" value="\.zip|\.rar|\.7z"/>
+    <add key="filespath" value="~/Users/"/>
+    <add key="ffmpegpath" value="E:\ffmpeg\bin\ffmpeg.exe"/>
   </appSettings>
   <system.web>
-    <httpRuntime />
+    <httpRuntime maxRequestLength="1048576" executionTimeout="3600" />
     <compilation debug="true" targetFramework="4.0" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" timeout="2880" />
