更改错别字

--- a/ZY.WEIKE.BLL/ZY.WEIKE.BLL.csproj
+++ b/ZY.WEIKE.BLL/ZY.WEIKE.BLL.csproj
@@ -58,9 +58,9 @@
       <Project>{5189a75c-dd1d-4c6b-b1ee-0d2a8fef9aef}</Project>
       <Name>ZY.WEIKE.IDAL</Name>
     </ProjectReference>
-    <ProjectReference Include="..\ZY.WEIKE.MODAL\ZY.WEIKE.MODAL.csproj">
+    <ProjectReference Include="..\ZY.WEIKE.MODAL\ZY.WEIKE.MODEL.csproj">
       <Project>{934fde02-081a-4a87-a6fe-2ebe5b6cbfb5}</Project>
-      <Name>ZY.WEIKE.MODAL</Name>
+      <Name>ZY.WEIKE.MODEL</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
