--- a/ZY.WEIKE.MODAL/ZY.WEIKE.MODEL.csproj
+++ b/ZY.WEIKE.MODAL/ZY.WEIKE.MODEL.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{934FDE02-081A-4A87-A6FE-2EBE5B6CBFB5}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>ZY.WEIKE.MODAL</RootNamespace>
-    <AssemblyName>ZY.WEIKE.MODAL</AssemblyName>
+    <RootNamespace>ZY.WEIKE.MODEL</RootNamespace>
+    <AssemblyName>ZY.WEIKE.MODEL</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -42,6 +42,8 @@
   <ItemGroup>
     <Compile Include="ColleageModel.cs" />
     <Compile Include="DepartmentModel.cs" />
+    <Compile Include="MessagesModel.cs" />
+    <Compile Include="MessagesTypeModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceModel.cs" />
     <Compile Include="UsersModel.cs" />
