--- a/ZY.WEIKE.BLL/ZY.WEIKE.BLL.csproj
+++ b/ZY.WEIKE.BLL/ZY.WEIKE.BLL.csproj
@@ -44,6 +44,7 @@
     <Compile Include="DepartmentBLL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceBLL.cs" />
+    <Compile Include="UserLogBLL.cs" />
     <Compile Include="UsersBLL.cs" />
     <Compile Include="VotesBLL.cs" />
     <Compile Include="WeiKeBLL.cs" />
