--- a/ZY.WEIKE.MSSQLDAL/ZY.WEIKE.MSSQLDAL.csproj
+++ b/ZY.WEIKE.MSSQLDAL/ZY.WEIKE.MSSQLDAL.csproj
@@ -46,13 +46,14 @@
   <ItemGroup>
     <Compile Include="ColleageDAL.cs" />
     <Compile Include="DeparmentDAL.cs" />
+    <Compile Include="MessagesDAL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ResourceDAL.cs" />
     <Compile Include="SqlHelper.cs" />
     <Compile Include="UsersDAL.cs" />
     <Compile Include="VotesDAL.cs" />
     <Compile Include="WeiKeDAL.cs" />
-    <Compile Include="WK_UserLogDAL.cs" />
+    <Compile Include="UserLogDAL.cs" />
     <Compile Include="WordsDAL.cs" />
   </ItemGroup>
   <ItemGroup>
